Fix font sizes on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1109,7 +1109,7 @@ p::first-letter {
 
 }
 
-@media (max-width: 550px) {
+@media (max-width: 450px) {
 
     section#banner, section#wall, section#team, section#contact {
         padding: 0.5rem;
@@ -1121,7 +1121,7 @@ p::first-letter {
     }
     #header a.logo {
         grid-column: 1/2;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         margin-left: 10px;
     }
     #header .burgerToggle {
@@ -1138,19 +1138,27 @@ p::first-letter {
         height: auto;
     }
     #header .nav.active a {
-        margin-bottom: 0.7rem;
-        font-size: 1rem;
+        margin-bottom: 1rem;
+        font-size: 1.2rem;
     }
 
     /*****/
+    #banner {
+        justify-content: center;
+    }
+
     #banner .content {
         transform: translateY(0%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     #banner .content .title {
-        font-size: 2.5rem;
+        font-size: 3rem;
     }
     #banner .content p {
-        font-size: 1.7rem;
+        font-size: 2rem;
     }
 
     /*****/
